--- a/pizza_final_practice.html
+++ b/pizza_final_practice.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Blackstone Bistro: Pizza-on-Demand</title>
-  <style type="text/css">
+  <style>
     ol,
     ul {
       list-style-type: none;
